@@ -1,5 +1,6 @@
 package org.cloudfoundry.multiapps.controller.process.steps;
 
+import static org.cloudfoundry.multiapps.controller.process.util.ServiceDeletionActions.DELETE_METADATA;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
@@ -72,7 +73,7 @@ class DetermineServiceDeleteActionsToExecuteStepTest extends SyncFlowableStepTes
         when(client.getServiceAppBindings(any())).thenReturn(List.of(buildCloudServiceBinding()));
         step.execute(execution);
         assertStepFinishedSuccessfully();
-        assertEquals(Collections.emptyList(), context.getVariable(Variables.SERVICE_DELETION_ACTIONS));
+        assertEquals(List.of(ServiceDeletionActions.DELETE_METADATA), context.getVariable(Variables.SERVICE_DELETION_ACTIONS));
     }
 
     @Test
@@ -81,7 +82,7 @@ class DetermineServiceDeleteActionsToExecuteStepTest extends SyncFlowableStepTes
         when(client.getServiceKeys(any(CloudServiceInstanceExtended.class))).thenReturn(List.of(buildCloudServiceKey()));
         step.execute(execution);
         assertStepFinishedSuccessfully();
-        assertEquals(Collections.emptyList(), context.getVariable(Variables.SERVICE_DELETION_ACTIONS));
+        assertEquals(List.of(ServiceDeletionActions.DELETE_METADATA), context.getVariable(Variables.SERVICE_DELETION_ACTIONS));
     }
 
     @Test
